# ElaineEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  setup_windows.bat
Binaries/Win64/Debug/: ElaineCore.exp  ElaineCore.lib  ElaineEngine.exp  ElaineEngine.lib
Binaries/Win64/EditorDebug/: ElaineCore.exp  ElaineCore.lib  ElaineEngine.exp  ElaineEngine.lib
Contents/config/: EngineConfig.cfg
Contents/shader/vulkan/: sky_ps.txt  sky_vs.txt
ElaineCore/: CMakeLists.txt  CmakeLists.txt
ElaineCore/Include/: ElaineBarrier.h  ElaineCamera.h  ElaineFileManager.h  ElaineFileSystem.h  ElaineLogSystem.h  ElaineMaterial.h  ElainePass.h  ElaineQuadTree.h  ElaineRenderQueue.h  ElaineRenderableObject.h  ElaineResourcePtr.h  ElaineRoot.h  ElaineSceneManager.h  ElaineSceneNode.h  ElaineSky.h  ElaineThread.h  ElaineThreadManager.h  ElaineTimer.h  ElaineUseCount.h
ElaineCore/Include/Common/: Elaine.h  ElaineCoreMacroDefinition.h  ElaineCorePrerequirements.h  ElaineHash.h  ElaineMD5.h  ElaineMemory.h  ElainePatform.h  ElainePrecompiledHeader.h  ElaineStdRequirements.h
ElaineCore/Include/JobSystem/: ElaineJob.h
ElaineCore/Include/component/: ElaineComponent.h  ElaineComponentFactory.h  ElaineGameObject.h  ElaineGameObjectMgr.h  ElaineTransformComponent.h
ElaineCore/Include/math/: ElaineAxisAlignedBox.h  ElaineMath.h  ElaineMatrix3.h  ElaineMatrix4.h  ElaineTransform.h  ElaineVector2.h  ElaineVector3.h  ElaineVector4.h
ElaineCore/Include/render/: ElainePass.h  ElaineRenderSystem.h  ElaineWindowSystem.h
ElaineCore/Include/render/common/: ElaineRHI.h  ElaineRHICommandContext.h  (+6 more)
ElaineCore/Include/resource/: ElaineDataStreamMgr.h  ElaineGameObjectInfoMgr.h  ElaineMesh.h  ElaineResourceBase.h  ElaineResourceManager.h
ElaineCore/Project/Windows/: ElaineCore.vcxproj  ElaineCore.vcxproj.filters
ElaineCore/Source/: ElaineBarrier.cpp  ElaineFileManager.cpp  ElaineInputSystem.cpp  ElaineLogSystem.cpp  ElaineMaterial.cpp  ElainePass.cpp  ElaineRenderQueue.cpp  ElaineRenderableObject.cpp  ElaineRoot.cpp  ElaineSceneManager.cpp  ElaineSceneNode.cpp  ElaineSky.cpp  ElaineThread.cpp  ElaineThreadManager.cpp  ElaineTimer.cpp
ElaineCore/Source/Common/: ElaineHash.cpp  ElaineMD5.cpp  ElaineMemory.cpp  ElainePrecompiledHeader.cpp
ElaineCore/Source/component/: ElaineComponent.cpp  ElaineComponentFactory.cpp  ElaineGameObject.cpp  ElaineGameObjectMgr.cpp
ElaineCore/Source/math/: ElaineAxisAlignedBox.cpp  ElaineMath.cpp  ElaineMatrix3.cpp  ElaineQuaternion.cpp  ElaineVector2.cpp
ElaineCore/Source/render/: ElainePass.cpp  ElaineRenderSystem.cpp  ElaineWindowSystem.cpp
ElaineCore/Source/resource/: ElaineDataStream.cpp  ElaineDataStreamMgr.cpp  ElaineGameObjectInfoMgr.cpp  ElaineResourceBase.cpp  ElaineResourceManager.cpp
ElaineEditor/: CmakeLists.txt
ElaineEditor/Include/: ElaineEditor.h  ElaineEditorPrerequirements.h
ElaineEditor/Project/Windows/: ElaineEditor.sln  ElaineEditor.vcxproj  ElaineEditor.vcxproj.filters
ElaineEditor/Source/: ElaineEditor.cpp  main.cpp  winmain.cpp
ElaineEngine/: CMakeLists.txt
ElaineEngine/Include/: ElaineEngine.h
ElaineEngine/Include/common/: ElaineEnginePrerequirements.h
ElaineEngine/Include/component/: ElaineComponentSystem.h
ElaineEngine/Project/Windows/: ElaineEngine.vcxproj  ElaineEngine.vcxproj.filters
ElaineEngine/Source/: ElaineEngine.cpp
ElaineEngine/Source/component/: ElaineComponentSystem.cpp
ElaineEngine/Source/framework/component/: ElaineComponent.cpp
ElaineRuntime/Project/Windows/: ElaineRuntime.vcxproj  ElaineRuntime.vcxproj.filters
ElaineSDK/ElaineCore/Include/: ElaineCamera.h  ElaineLogSystem.h  ElaineRenderableObject.h  ElaineRoot.h  ElaineSceneManager.h  ElaineSceneNode.h  ElaineThread.h  ElaineThreadManager.h  ElaineTimer.h  ElaineUseCount.h
ElaineSDK/ElaineCore/Source/: ElaineCamera.cpp  ElaineFileSystem.cpp  ElaineQuadTree.cpp  ElaineRoot.cpp  ElaineSceneManager.cpp  ElaineThread.cpp  ElaineThreadManager.cpp  ElaineTimer.cpp  ElaineUseCount.cpp
ElaineSDK/ElaineEngine/Include/: ElaineEngine.h
ElaineSDK/ElaineEngine/Source/: ElaineEngine.cpp
ElaineSDK/Include/: ElaineInputSystem.h  ElaineRenderableObject.h  ElaineResourcePtr.h  ElaineRoot.h  ElaineSceneManager.h  ElaineSceneNode.h  ElaineTimer.h  ElaineUseCount.h
ElaineSDK/Include/Common/: ElaineCorePrerequirements.h  ElaineHash.h  ElaineSingleton.h
ElaineSDK/Include/JobSystem/: ElaineJobSystem.h
ElaineSDK/Include/component/: ElaineComponentFactory.h  ElaineGameObject.h  ElaineTransformComponent.h
ElaineSDK/Include/math/: ElaineRandom.h
ElaineSDK/Include/render/: ElaineEntity.h
ElaineSDK/Include/resource/: ElaineDataStream.h  ElaineDataStreamMgr.h  ElaineGameObjectInfoMgr.h  ElaineResourceBase.h  ElaineResourceManager.h
Samples/: CmakeLists.txt
Samples/ElaineGame/: CmakeLists.txt
(+102 files in other folders)
